Basic styling for event listing page - need to color buttons and make the columns align properly in large and small devices, also need to fix medium size on header for search

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -23,6 +23,16 @@ $white: #ffffff;
 
 }
 
+.event{
+  padding: 0px;
+  margin: 0px;
+
+  .time_range{
+    padding-left: 50px;
+    margin-left: 50px;
+  }
+}
+
 h2 {
 	font-family: 'Open Sans', sans-serif;
 	font-weight: 600;
